# minecraftpe-nx-ctr

.github/workflows/: build-3ds.yml
handheld/project/ctr/: CMakeLists.txt
handheld/project/ntr/: CMakeLists.txt
handheld/project/nx/: CMakeLists.txt
handheld/src/client/gui/: Gui.cpp  Gui.h
handheld/src/client/gui/screens/touch/: TouchSelectWorldScreen.cpp
handheld/src/world/food/: FoodConstants.h  SimpleFoodData.cpp  SimpleFoodData.h
handheld/src/world/item/: FoodItem.h
